[package]
name = "murl"
version = "0.1.0"
edition = "2021"
description = "Non-stringly-typed URLs"
license = "MIT"
keywords = ["url"]
repository = "https://github.com/Tomaz-Vieira/murl"
readme = "README.md"
categories = ["web-programming", "encoding"]

[dependencies]
camino = "1.1.9"
percent-encoding = "2.3.1"
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "1.0.64"

