[package]
name = "murl"
version = "0.1.0"
edition = "2021"
description = "Non-stringly-typed URLs"
license = "MIT"
keywords = ["url"]
repository = "https://github.com/Tomaz-Vieira/murl"
readme = "README.md"
categories = ["web-programming", "encoding"]

[features]
serde = ["dep:serde", "ordermap/serde", "camino/serde1"]

[dependencies]
camino = { version = "1.1.9" }
ordermap = { version = "0.5.7" }
percent-encoding = "2.3.1"
serde = { version = "1.0.219", features = ["derive"], optional = true }
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "1.0.64"

[dev-dependencies]
serde_json = "1.0.140"

